[package]
name = "rs_fi_ds"
version = "0.2.0"
edition = "2021"
description = "Added support for data frame api."
[dependencies]
log = "0.4"
chrono = "0.4.39"
assert_approx_eq = "1.1.0"
filters = "0.4.0"
datafusion = "45.0.0"
tokio = {version = "1.43", features = ["rt", "macros", "sync", "rt-multi-thread"]}
