[package]
name = "rs_fi_ds"
version = "0.2.0"
edition = "2021"
description = "Added support for data frame api."
[dependencies]
log = "0.4"
chrono = "0.4.39"
assert_approx_eq = "1.1.0"
filters = "0.4.0"
datafusion = "45.0.0"
tokio = {version = "1.43", features = ["rt", "macros", "sync", "rt-multi-thread"]}
actix-web = "^4"
serde = {version = "^1.0.218", features = ["derive"]}
serde_json = {version = "^1.0.140"}
env_logger = "0.8"
strum_macros = "^0.24"
strum = {version = "^0.24", features = ["derive"]}
