[package]
name = "rs_fi_ds"
version = "0.3.1"
edition = "2021"
license = "GPLv3"
path = "src"
crate-type = ["lib"]
description = "A simple fixed income library using some commonly used constructs to evaluate portfolio."
[dependencies]
log = "0.4"
chrono = {version = "0.4.39", features = ["serde"]}
assert_approx_eq = "1.1.0"
filters = "0.4.0"
datafusion = "45.0.0"
actix-web = "^4"
serde = {version = "^1.0.218", features = ["derive"]}
serde_json = {version = "^1.0.140"}
env_logger = "0.8"
strum_macros = "^0.24"
strum = {version = "^0.24", features = ["derive"]}
